styles/pages/projectDetail.scss
.project__detail {
  background: $grey-shade-2;
  &-bottom {
    &-wrap {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
    }
  }
  &-left-section {
    width: calc(100% - 400px - 3rem) ;
    @include responsive($ipad-pro) {
      width: 100%;
    }
  }
  &-right-section {
    width: 400px;
    margin-left: 3rem;
    @include responsive($ipad-pro) {
      width: 100%;
      margin-left: 0;
    } 
  }
  .common-card {
    @include vendor(box-shadow,$box-shadow);
    .card-content {
      ul {
        li {
          margin-bottom: 1rem;
          position: relative;
          padding-left: 1.5rem;
          &::after {
            content: '';
            position: absolute;
            left: 0;
            top: 50%;
            transform: translateY(-50%);
            width: 7px;
            height: 7px;
            border-radius: 50%;
            background: $black-clr;
          }
        }
      }
      h1,h2,h3,h4,h5,h6 {
        font-size: 1.8rem;
        font-weight: 600;
        margin-bottom: 1rem;
      }
      p {
        font-size: 1.4rem;
        line-height: 2rem;
        margin-bottom: 1rem;
        color: $text-clr-primary;
      }
    }
  }
  &-featured {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    .project-res {
      margin-bottom: 2rem;
      width: 100%;
      @include responsive($ipad-pro) {
        width: calc(50% - 1rem);
      }
      @include responsive($mob-max) {
        width: 100%;
      }
    }
    .project-wrap {
      // border: 1px solid #E8E8E8;
    }
  }
  &-banner {
    display: flex;
    align-items: center;
    justify-content: center;
    img {
      @include vendor(box-shadow,$box-shadow)
    }
  }
  &-highlights,&-amenities {
    .card-content {
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-start;
    }
    .horizontal__profile {
      width: calc(50% - 2rem);
      margin-bottom: 2rem;
      margin-right: 1rem;
      margin-left: 1rem;
      @include responsive($mob) {
        width: 100%;
        margin-right: 0;
        margin-left: 0;
      }
      &-name,&-feature {
        display: block;
        color: $text-clr-primary;
        font-size: 1.3rem;
        line-height: 1.9rem;
      }
    }

  }
  &-amenities {
    .horizontal__profile {
      width: calc(33.33% - 2rem);
      @include responsive($tablet) {
        width: calc(50% - 2rem);
      }
      @include responsive($mob) {
        width: 100%;
        margin-right: 0;
        margin-left: 0;
      }
    }
  }
  &-plan-price {
    text-align: center;
    .top-plan-price {
      display: flex;
      align-items: flex-start;
      justify-content: space-between;
      @include responsive($mob) {
        flex-direction: column;
        justify-content: center;
      }
    }
    .price-plan-price {
      font-size: 2.4rem;
      line-height: 3.2rem;
      color: $text-clr-primary;
      font-weight: 600;
    }
    .tabs-plan-price {
      display: flex;
      align-items: center;
      justify-content: flex-start;
      .tabs-wrap-plan-price {
        margin-right: 1rem;
        .structure-plan-price {
          margin-bottom: 2rem;
          background-color: $white-clr;
          border: 1px solid $accent-clr-2;
          color: $accent-clr-2;
          &:hover {
            background-color: $accent-clr-2;
            color: $white-clr;
          }
        }
        .area-plan-price {
          font-size: 1.6rem;
          line-height: 2.2rem;
          color: $placeholder;
        }
      }
    }
    .active {
      &.tabs-wrap-plan-price {
        .structure-plan-price {
          background-color: $accent-clr-2;
          color: $white-clr;
          pointer-events: none;
        }
        .area-plan-price {
          color: $text-clr-primary;
          border-bottom: 1px solid $accent-clr-2;
        }
      }
    }
  }
  &-top {
    background: $white-clr;
    @include vendor(box-shadow,$box-shadow-2);
    // padding-bottom: 2rem;
    .detail__wrap {
      display: flex;
      align-items: flex-start;
      justify-content: space-between;
      flex-wrap: wrap;
      &-image-wrap {
        width: calc(60% - 2rem);
        @include responsive($ipad) {
          width: 100%;
          margin-bottom: 3rem;
          text-align: center;
        }
      }
      &-image-big,&-image-sm{
        border-radius: 12px;
        @include vendor(box-shadow,$box-shadow-2);
        background-color: $grey;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
      }
      &-image-big{
        width: 100%;
        height: 440px;
        margin-bottom: 2rem;
        @include responsive($ipad){
          height: 550px;
        }
        @include responsive($tablet){
          height: 400px;
        }
        @include responsive($mob){
          height: 250px;
        }
      }
      &-image-sm{
        cursor: pointer;
        margin-right: 1rem;
        width: calc(100% - 1rem);
        height: 150px;
        border-radius: 12px;
        opacity: 0.6;
        @include add-transition(all,0.3s);
        &.active,&:hover{
          opacity: 1;
        }
        @include responsive($mob-max){
          height: 100px;
        }
        @include responsive($mob-min){
          height: 80px;
        }
      }
      &-content {
        width: calc(40% - 2rem);
        @include responsive($ipad) {
          width: 100%;
        }
        .content-title,.content-price-range {
          font-size: 4rem;
          line-height: 5rem;
          font-weight: 700;
          color: $text-clr-primary;
          text-shadow: $text-shadow;
          @include responsive($mob) {
            font-size: 3rem;
            line-height: 4rem;
          }
        }
        .content-provider,.content-address {
          color: $placeholder;
        }
        .content-provider {
          font-size: 2.4rem;
          line-height: 3.2rem;
          @include responsive($mob) {
            font-size: 1.8rem;
            line-height: 2.4rem;
          }
        }
        .content-address {
          display: flex;
          align-items: center;
          span {
            font-size: 1.3rem;
            line-height: 1.9rem;
          }
          svg {
            margin-right: .6rem;
          }
        }
        .content-feature-wrap {
          .horizontal__profile {
            margin-bottom: 2rem;
            &-icon {
              border: 1.5px solid $accent-clr-2;
              width: 64px;
              height: 64px;
              @include vendor(box-shadow,$box-shadow-2);
              svg {
                width: 40px;
                height: 40px;
              }
            }
            &-name,&-feature {
              color: $text-clr-primary;
            }
            &-name {
              font-weight: 700;
            }
          }
        }
        .content-button {
          width: 100%;
          @include vendor(box-shadow,$box-shadow-2);
        }
        .content-tags {
          display: flex;
          flex-wrap: wrap;
          justify-content: flex-start;
          align-items: center;
          &-name {
            margin-right: 2rem;
            margin-bottom: 2rem;
            background-color: $white-clr;
            border: 1px solid $accent-clr-2;
            color: $accent-clr-2;
            @include vendor(box-shadow,$box-shadow-2);
            padding: .8rem 1.5rem;
            border-radius: 12px;
          }
        }
      }
    }
    .project__tab {
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
      @include responsive($tablet) {
        display: none;
      }
      &-button {
        margin-right: 3rem;
        margin-bottom: 2rem;
        border-radius: 12px;
        padding: 1rem 2rem;
        text-transform: capitalize;
        cursor: pointer;
        @include add-transition(all,0.3s);
        display: inline-flex;
        align-items: center;
        justify-content: center;
        background-color: $grey-shade-2;
        color: $text-clr-primary;
        &:hover {
          background-color:$text-clr-primary;
          color: $white-clr;
        }
      }
    }
  }
}

